--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Cliff O'Reilly</h1>
-<p>I'm hosted with GitHub Pages yeah.</p>
+<p>I am hosted with GitHub Pages yeah.</p>
 </body>
 </html>
