--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <body>
 <h1>Cliff O'Reilly</h1>
-<p>I am hosted with GitHub Pages yeah.</p>
+<p>I am a 2nd year part-time researcher (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+<h2>Research interests</h2>
+<p>My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
+<h2>Research goals</h2>
+<p>My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
 </body>
 </html>
