--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1>Cliff O'Reilly</h1>
-<p>I am a 2nd year part-time researcher (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+<h2>cliff.oreilly@city.ac.uk</h2>
+<p>I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
 <h2>Research interests</h2>
 <p>My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
 <h2>Research goals</h2>
