--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        body {background-color: #fff3e6;}
+        h1   {color: #cc0000;}
+        p    {color: #663300;}
+        </style>
+</head>
 <body>
 <h1>Cliff O'Reilly</h1>
 <h2>cliff.oreilly@city.ac.uk</h2>
