--- a/index.html
+++ b/index.html
@@ -1,20 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <style>
-        body {background-color: #fff3e6;}
-        h1   {color: #cc0000;}
-        p    {color: #663300;}
-        </style>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
 </head>
 <body>
-<h1>Cliff O'Reilly</h1>
-<h2>cliff.oreilly@city.ac.uk</h2>
-<h2><a href='https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en'>Google Scholar</a></h2>
-<p>I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
-<h2>Research interests</h2>
-<p>My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
-<h2>Research goals</h2>
-<p>My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Research</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Publications</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Research</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Publications</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large">Projects</a>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">Cliff O'Reilly</h1>
+  <p class="w3-xlarge">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+  <h2>cliff.oreilly@city.ac.uk</h2>
+  <h2><a href='https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en'>Google Scholar</a></h2>
+</header>
+
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
+      <h1>Research interests</h1>
+
+      <p class="w3-text-grey">My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
+    </div>
+
+    <div class="w3-third w3-center">
+      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+    </div>
+  </div>
+</div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Research goals</h1>
+
+      <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+    </div>
+  </div>
+</div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
+  <div class="w3-xlarge w3-padding-32">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+ </div>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
+
 </body>
 </html>
