--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
+.w3-bar,h1,button {font-family: "Lora", sans-serif}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 </head>
@@ -35,11 +36,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">Cliff O'Reilly</h1>
-  <p class="w3-large">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
-  <h2>cliff.oreilly@city.ac.uk</h2>
-  <h2><a href='https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en'>Google Scholar</a></h2>
+<header class="w3-container w3-sand w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-xlarge">Cliff O'Reilly</h1>
+  <div class="w3-center w3-large" style="width:50%"><p>I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+  </div>
+  <div class="w3-xlarge w3-padding-32 w3-center" style="width:50%">
+    <i class="fa fa-envelope w3-hover-opacity"></i>
+    <i class="fa-brands fa-twitter w3-hover-opacity"></i>
+    <i class="fa-brands fa-linkedin w3-hover-opacity"></i>
+ </div>
+  <div class="w3-center">
+  <h2 class="w3-large">cliff.oreilly@city.ac.uk</h2>
+  <h2 class="w3-large"><a href='https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en'>Google Scholar</a></h2>
+</div>
 </header>
 
 <!-- First Grid -->
@@ -52,7 +61,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
 
     <div class="w3-third w3-center">
-      <i class="fa fa-anchor w3-padding-64 w3-text-red"></i>
+      <i class="fa-solid fa-circle-nodes w3-padding-64 w3-text-red"></i>
     </div>
   </div>
 </div>
@@ -61,13 +70,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+      <i class="fa-solid fa-hands-asl-interpreting w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
       <h1>Research goals</h1>
 
-      <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+      <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
     </div>
   </div>
 </div>
@@ -75,14 +84,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
- </div>
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
