--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB-Garamond">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
-.w3-bar,h1,button {font-family: "Lora", sans-serif}
+.w3-bar,h1,button {font-family: "EB-Garamond"}
 .fa-anchor,.fa-coffee {font-size:200px}
 </style>
 </head>
@@ -37,17 +36,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-sand w3-center" style="padding:128px 16px">
+    <div class="w3-xlarge w3-padding-32 w3-center">
+        <a href="https://www.city.ac.uk/about/schools/science-technology" alt="LinkedIn" title="LinkedIn"><img src="https://studenthub.city.ac.uk/__data/assets/git_bridge/0013/412600/main/img/city-university-london-full.svg" width="100" height="120" alt="City, University of London"></a>
+    </div>
   <h1 class="w3-margin w3-xlarge">Cliff O'Reilly</h1>
-  <div class="w3-center w3-large" style="width:50%"><p>I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+  <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:30em;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
   </div>
-  <div class="w3-xlarge w3-padding-32 w3-center" style="width:50%">
-    <i class="fa fa-envelope w3-hover-opacity"></i>
-    <i class="fa-brands fa-twitter w3-hover-opacity"></i>
-    <i class="fa-brands fa-linkedin w3-hover-opacity"></i>
+  <div class="w3-xlarge w3-padding-32 w3-center">
+    <a href="mailto:cliff.oreilly@city.ac.uk" title="cliff.oreilly@city.ac.uk"><i class="fa fa-envelope w3-hover-opacity"></i></a>
+    <a href="https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-solid fa-graduation-cap w3-hover-opacity"></i></a>
+    <a href="https://www.researchgate.net/profile/Cliff-Oreilly" target="_blank" title="Research Gate"><i class="fa-brands fa-researchgate w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/clifforeilly/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://drive.google.com/file/d/1IMolORkB9MGNJ6uwZEbbbu9ZJr38jU52/view?usp=sharing" target="_blank" title="Academic CV"><i class="fa-solid fa-file w3-hover-opacity"></i></a>
  </div>
-  <div class="w3-center">
-  <h2 class="w3-large">cliff.oreilly@city.ac.uk</h2>
-  <h2 class="w3-large"><a href='https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en'>Google Scholar</a></h2>
+
+
 </div>
 </header>
 
@@ -60,7 +63,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
       <p class="w3-text-grey">My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
     </div>
 
-    <div class="w3-third w3-center">
+    <div class="w3-third w3-center" style="font-size:15em;">
       <i class="fa-solid fa-circle-nodes w3-padding-64 w3-text-red"></i>
     </div>
   </div>
@@ -69,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
 <!-- Second Grid -->
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
-    <div class="w3-third w3-center">
+    <div class="w3-third w3-center" style="font-size:15em;">
       <i class="fa-solid fa-hands-asl-interpreting w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
