--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
         <a href="https://www.city.ac.uk/about/schools/science-technology" alt="LinkedIn" title="LinkedIn"><img src="https://studenthub.city.ac.uk/__data/assets/git_bridge/0013/412600/main/img/city-university-london-full.svg" width="100" height="120" alt="City, University of London"></a>
     </div>
   <h1 class="w3-margin w3-xlarge">Cliff O'Reilly</h1>
-  <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:30em;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+  <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:50%;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
   </div>
   <div class="w3-xlarge w3-padding-32 w3-center">
     <a href="mailto:cliff.oreilly@city.ac.uk" title="cliff.oreilly@city.ac.uk"><i class="fa fa-envelope w3-hover-opacity"></i></a>
     <a href="https://scholar.google.com/citations?user=WEme_AYAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fa-solid fa-graduation-cap w3-hover-opacity"></i></a>
     <a href="https://www.researchgate.net/profile/Cliff-Oreilly" target="_blank" title="Research Gate"><i class="fa-brands fa-researchgate w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/clifforeilly/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin w3-hover-opacity"></i></a>
-    <a href="https://drive.google.com/file/d/1IMolORkB9MGNJ6uwZEbbbu9ZJr38jU52/view?usp=sharing" target="_blank" title="Academic CV"><i class="fa-solid fa-file w3-hover-opacity"></i></a>
+    <a href="https://drive.google.com/file/d/1IMolORkB9MGNJ6uwZEbbbu9ZJr38jU52/view?usp=sharing" target="_blank" title="Academic CV"><i class="fa-regular fa-file w3-hover-opacity"></i></a>
  </div>
 
 
