--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB-Garamond">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+<link rel="icon" href="favicon-32x32.png">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
 .w3-bar,h1,button {font-family: "EB-Garamond"}
@@ -40,7 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
         <a href="https://www.city.ac.uk/about/schools/science-technology" alt="LinkedIn" title="LinkedIn"><img src="https://studenthub.city.ac.uk/__data/assets/git_bridge/0013/412600/main/img/city-university-london-full.svg" width="100" height="120" alt="City, University of London"></a>
     </div>
   <h1 class="w3-margin w3-xlarge">Cliff O'Reilly</h1>
-  <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:50%;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in semantic modelling of natural language.</p>
+  <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:60%;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in cognitive and semantic modelling of natural language.</p>
   </div>
   <div class="w3-xlarge w3-padding-32 w3-center">
     <a href="mailto:cliff.oreilly@city.ac.uk" title="cliff.oreilly@city.ac.uk"><i class="fa fa-envelope w3-hover-opacity"></i></a>
