--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
   <div class="w3-bar w3-sand w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-sand" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Research</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Publications</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
+    <a href="#research" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Research</a>
+    <a href="#pubs" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Publications</a>
+    <a href="#projects" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Projects</a>
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Research</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Publications</a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">Projects</a>
+    <a href="#research" class="w3-bar-item w3-button w3-padding-large">Research</a>
+    <a href="#pubs" class="w3-bar-item w3-button w3-padding-large">Publications</a>
+    <a href="#projects" class="w3-bar-item w3-button w3-padding-large">Projects</a>
   </div>
 </div>
 
@@ -85,6 +85,41 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
   </div>
 </div>
 
+<!-- First 'page'' -->
+<div id="research" class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+  
+      <div class="w3-twothird">
+        <h1>Research</h1>
+  
+        <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Second 'page'' -->
+<div id="pubs" class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+  
+      <div class="w3-twothird">
+        <h1>Publications</h1>
+  
+        <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+      </div>
+    </div>
+  </div>
+
+<!-- Third 'page'' -->
+<div id="projects" class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+  
+      <div class="w3-twothird">
+        <h1>Projects</h1>
+  
+        <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+      </div>
+    </div>
+  </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
