--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
       <div class="w3-twothird">
         <h1>Research</h1>
   
-        <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+        <p class="w3-text-grey">I have spent the first phase of PhD research (as MPhil) focussing on the following:
+            <ul><li>Symbolic models of rhetorical figures using OWL</li>
+                <li><a href="https://github.com/KRR-Oxford/OWL2Vec-Star">OWL2Vec</a> embedding models of symbolic representations</li>
+                <li>Creation of a corpus of tweets which contain hard examples of rhetorical figure <a href="https://en.wikipedia.org/wiki/Litotes">Litotes</a></li>
+            <li>Logistic Regression models of Litotes</li>
+        <li>Large language models of Litotes</li></ul>
+        </p>
       </div>
     </div>
   </div>
@@ -146,7 +152,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
       <div class="w3-twothird">
         <h1>Projects</h1>
   
-        <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+        <p class="w3-text-grey"><ul><li>Neuro-symbolic models of Litotes</li>
+            <li>Cognitive models of music</li>
+        </ul></p>
       </div>
     </div>
   </div>
