--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
 <!-- Header -->
 <header class="w3-container w3-sand w3-center" style="padding:128px 16px">
     <div class="w3-xlarge w3-padding-32 w3-center">
-        <a href="https://www.city.ac.uk/about/schools/science-technology" alt="LinkedIn" title="LinkedIn"><img src="https://studenthub.city.ac.uk/__data/assets/git_bridge/0013/412600/main/img/city-university-london-full.svg" width="100" height="120" alt="City, University of London"></a>
+        <a href="https://www.city.ac.uk/about/schools/science-technology" title="City, University of London"><img src="https://studenthub.city.ac.uk/__data/assets/git_bridge/0013/412600/main/img/city-university-london-full.svg" width="100" height="120" alt="City, University of London"></a>
     </div>
   <h1 class="w3-margin w3-xlarge">Cliff O'Reilly</h1>
   <div class="w3-center w3-large"><p style="margin-left: auto; margin-right: auto; width:60%;">I am a 2nd year part-time researcher at City, Univerty of London (currently at MPhil stage) with a commercial background in data and technology and some academic experience in cognitive and semantic modelling of natural language.</p>
@@ -61,7 +61,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
     <div class="w3-twothird">
       <h1>Research interests</h1>
 
-      <p class="w3-text-grey">My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real world corpora. The symbolic models combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
+      <p class="w3-text-grey">My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real-world corpora. The symbolic representations combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
+      <p class="w3-text-grey">More broadly I am interested in the ways that humans perceive and conceive the world and the ways that these effects can be understood and modeled by computing systems.</p>
     </div>
 
     <div class="w3-third w3-center" style="font-size:15em;">
@@ -81,6 +82,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
       <h1>Research goals</h1>
 
       <p class="w3-text-grey">My primary goal in research is to develop computer models of complex linguistic forms that can perform tasks such as classification, prediction and language generation and with applications such as Natural Language Understanding, hate-speech recognition, automated reasoning, document intention, sentiment analysis etc. A secondary aim is to 'reverse engineer' linguistic forms by abstracting into models that have meaning to human beings, i.e. to understand language in new ways through insights gained by combining symbolic models with machine learning.</p>
+      <p class="w3-text-grey">The class of language tools - described by the broad term <em>rhetorical figures</em> - are intriguing and ubiquitous patterns of communication which often defy complete explanation even by fluent speakers. They are intricately connected to meaning and communication and can be considered as conforming to cognitive processes which are often out of reach of introspection. As such I believe they are a useful phenomenon over which to compute using state of the art models of language and connectionist tools.</p>
     </div>
   </div>
 </div>
@@ -95,7 +97,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
         <p class="w3-text-grey">I have spent the first phase of PhD research (as MPhil) focussing on the following:
             <ul><li>Symbolic models of rhetorical figures using OWL</li>
                 <li><a href="https://github.com/KRR-Oxford/OWL2Vec-Star">OWL2Vec</a> embedding models of symbolic representations</li>
-                <li>Creation of a corpus of tweets which contain hard examples of rhetorical figure <a href="https://en.wikipedia.org/wiki/Litotes">Litotes</a></li>
+                <li>Creation of a corpus of tweets which contain hard examples of the rhetorical figure <a href="https://en.wikipedia.org/wiki/Litotes">Litotes</a></li>
             <li>Logistic Regression models of Litotes</li>
         <li>Large language models of Litotes</li></ul>
         </p>
@@ -162,6 +164,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+ <p><img title="hello" src="favicon.ico"/></p>
 </footer>
 
 <script>
