--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lora", sans-serif}
       <h1>Research interests</h1>
 
       <p class="w3-text-grey">My interests lie in creating symbolic models of complex forms of natural language, e.g. rhetorical figures, and combining these with machine learning models that can calculate over real-world corpora. The symbolic representations combine attributes and dimensions from NLP models, linguistics, cognitive science, philosophy and formal structures and patterns. Machine learning models of interest include linear algorithms such as Logistic Regression, more complex bespoke implementations of neural networks and pre-built language models.</p>
-      <p class="w3-text-grey">More broadly I am interested in the ways that humans perceive and conceive the world and the ways that these effects can be understood and modeled by computing systems.</p>
+      <p class="w3-text-grey">More broadly I am interested in the mechanisms that underpin how humans perceive and conceive the world and the ways that these effects can be understood and modeled by computing systems.</p>
     </div>
 
     <div class="w3-third w3-center" style="font-size:15em;">
